<resources>
    <string name="app_name">Flickrpedia</string>
    <string name="login_title">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="success_login_msg">Welcome back, Success login with %s</string>
    <string name="success_registration_msg">Welcome, we\'ve created an account with %s</string>
    <string name="age_hint">Age</string>
    <string name="login_btn_text">Login</string>
    <string name="register_btn_text">Register</string>
    <string name="dont_have_an_account">Don\'t you have an account? No problem</string>
    <string name="already_has_an_account">Already has an account?</string>
    <string name="password_is_required">Password is required</string>
    <string name="password_can_t_be_less_than_6_or_more_than_12_character">password can\'t be less than 6 or more than 12 character</string>
    <string name="email_is_required">Email is required</string>
    <string name="invalid_email_format">Invalid Email format</string>
    <string name="image_details_section">Image Details</string>
    <string name="image_size_label">Image size</string>
    <string name="image_type_label">Image Type</string>
    <string name="image_tags_label">Image Tags</string>
    <string name="user_details_section_title">User Details</string>
    <string name="user_views_label">Views</string>
    <string name="user_likes_label">Likes</string>
    <string name="user_comments_label">Comments</string>
    <string name="user_favorites_label">Favorites</string>
    <string name="user_downloads_label">Downloads</string>
    <string name="age_is_required">Age is required</string>
    <string name="username_and_password_are_not_matching">username and password are not matching</string>
    <string name="the_email_already_registered_please_login_error_msg">The Email already registered, please login</string>


</resources>