<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="com.example.flickrpedia.presentation.UserViewModel.UserUiState"/>
        <variable
            name="userViewModel"
            type="com.example.flickrpedia.presentation.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/innerConstraint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/screenTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Login" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="32dp"
                android:hint="@string/email_hint"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/screenTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="mustafa@example.com" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginBottom="32dp"
                android:hint="@string/password_hint"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailTextLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="mustafa@example.com" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ageTextLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginBottom="32dp"
                android:hint="@string/age_hint"
                android:setVisibility="@{userViewModel.userType}"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ageTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:inputType="none"
                    tools:text="mustafa@example.com" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/userPrimaryBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="26dp"
                android:focusable="true"
                android:setText="@{userViewModel.userType}"
                android:text="@string/login_btn_text"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ageTextLayout"
                tools:text="Login" />

            <TextView
                android:id="@+id/switchUserType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:layout_marginVertical="8dp"
                android:setBottomText="@{userViewModel.userType}"
                android:text="@string/dont_have_an_account"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userPrimaryBtn" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:visibility="@{userViewModel.uiState instanceof UserUiState.Loading ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switchUserType" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>